# xrd-analysis

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  WARP.md  container_dataframe_nomenclature.html  environment.yaml  environment.yml  genindex.html  hdf5.html  index.html  l1_metric_heatmap.py  logistic_regression_analysis.ipynb  objects.inv  pipeline.html  preprocessing.ipynb  preprocessing_debug.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sop.html  test_environment.py  validation.html  xrdanalysis.data_processing.html
.doctrees/: container_dataframe_nomenclature.doctree  environment.pickle  hdf5.doctree  index.doctree  pipeline.doctree  sop.doctree  validation.doctree  xrdanalysis.data_processing.doctree
_sources/: container_dataframe_nomenclature.rst.txt  pipeline.rst.txt  sop.rst.txt  xrdanalysis.data_processing.rst.txt
_static/: bizstyle.js
docs/: Makefile  conf.py  index.rst  make.bat  sop.rst  xrdanalysis.data_processing.rst
examples/: azimuthal_feature_extraction.py  azimuthal_features.py  azimuthal_integration_sensitivity.py  azimuthal_pca_plot.py  azimuthal_peak_fitting.py  azimuthal_peak_plots.py  beam_assessment.py  blind_metrics.py  brightness_count.py  calibration_estimation.py  cancer_cluster_estimator.py  clustering_counterexample.py  exclusion_list.py  gaussian_decomposition.py  gaussian_fit.py  gaussian_training.py  grid_search_cv.py  kmeans.py  kmeans_performance.py  l1_metric_heatmap.py  logistic_regression_analysis.ipynb  pca_plot.py  polar_grid.py  (+9 more)
(+471 files in other folders)
