[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eosdxanalysis"
version = "2.19.0"
authors = [
  { name="Jonathan Friedman", email="jfriedman@eosdx.com" },
]
description = "Eos Dx XRD Analysis Software"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Eos-Dx/xrd-analysis"
"Bug Tracker" = "https://github.com/Eos-Dx/xrd-analysis/issues"
